[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Assets/GUI/MediumNormalButton.tres" type="Texture" id=1]
[ext_resource path="res://UI/Assets/GUI/MediumPressedButton.tres" type="Texture" id=2]
[ext_resource path="res://UI/Font/PixelFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://GUI.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.843137, 0.843137, 0.843137, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="StartScreen" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0
color = Color( 0, 0, 0, 1 )

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="GameMenu" type="Control" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -125.0
margin_right = 75.0
margin_bottom = 125.0

[node name="Panel" type="Panel" parent="GUI/GameMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/GameMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 12

[node name="Label" type="Label" parent="GUI/GameMenu/VBoxContainer"]
margin_right = 130.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 3 )
text = "THMastery"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="GUI/GameMenu/VBoxContainer"]
margin_top = 29.0
margin_right = 130.0
margin_bottom = 39.0
rect_min_size = Vector2( 0, 10 )

[node name="NewGame" type="TextureButton" parent="GUI/GameMenu/VBoxContainer"]
margin_left = 25.0
margin_top = 51.0
margin_right = 105.0
margin_bottom = 76.0
rect_min_size = Vector2( 80, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="GUI/GameMenu/VBoxContainer/NewGame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "New Game"
align = 1
valign = 1

[node name="Load" type="TextureButton" parent="GUI/GameMenu/VBoxContainer"]
margin_left = 25.0
margin_top = 88.0
margin_right = 105.0
margin_bottom = 113.0
rect_min_size = Vector2( 80, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="GUI/GameMenu/VBoxContainer/Load"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Load"
align = 1
valign = 1

[node name="Options" type="TextureButton" parent="GUI/GameMenu/VBoxContainer"]
margin_left = 25.0
margin_top = 125.0
margin_right = 105.0
margin_bottom = 150.0
rect_min_size = Vector2( 80, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="GUI/GameMenu/VBoxContainer/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Options"
align = 1
valign = 1

[node name="ExitToDesktop" type="TextureButton" parent="GUI/GameMenu/VBoxContainer"]
margin_left = 25.0
margin_top = 162.0
margin_right = 105.0
margin_bottom = 187.0
rect_min_size = Vector2( 80, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="GUI/GameMenu/VBoxContainer/ExitToDesktop"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Desktop"
align = 1
valign = 1

[connection signal="pressed" from="GUI/GameMenu/VBoxContainer/NewGame" to="GUI" method="_on_NewGame_pressed"]
[connection signal="pressed" from="GUI/GameMenu/VBoxContainer/Load" to="GUI" method="_on_Load_pressed"]
[connection signal="pressed" from="GUI/GameMenu/VBoxContainer/Options" to="GUI" method="_on_Options_pressed"]
[connection signal="pressed" from="GUI/GameMenu/VBoxContainer/ExitToDesktop" to="GUI" method="_on_ExitToDesktop_pressed"]
